[package]
name = "probability_diagram"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Greshake"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.8"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlTextAreaElement',
  'MouseEvent',
  'HtmlInputElement',
  'InputEvent'
]